<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Quick Response</string>
    <string name="app_owner" translatable="false">Sharp Response</string>
    <string name="description">Optimum Security for your Safety</string>
    <string name="app_update_default_description">Looks like you have an older\nversion of the app.\nPlease update to get latest\nfeatures and best experience.</string>
    <string name="app_update_positive_text">UPDATE NOW</string>
    <string name="submit">Submit </string>
    <string name="background_image">Background Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="state">State</string>
    <string name="zip_code">Local Government Area or Zip Code</string>
    <string name="local_government">Local Government Area</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="logout">Logout?</string>
    <string name="title_profile">User\'s profile</string>
    <string name="title_update_email">Update user\'s email</string>
    <string name="title_update_password">Update user\'s password</string>
    <string name="title_send_password_reset">Send password reset</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="button_close">Close</string>
    <string name="error_message">Error</string>
    <string name="open_camera">Open Camera</string>
    <string name="cancel">Cancel</string>
    <string name="image_mode">Image Mode</string>
    <string name="finish">Finish</string>
    <string name="country_title">Country</string>
    <string name="language_title">Language</string>
    <string name="manage_sms">Manage Sms</string>
    <string name="manage_location">Manage Location</string>
    <string name="media">Media</string>
    <string name="privacy_policy">Privacy Policies</string>
    <string name="terms_conditions">Terms/Conditions</string>
    <string name="user_authentication">User Authentication</string>
    <string name="manage_account">Manage Account</string>
    <string name="user_info">User Info</string>
    <string name="dashboard">Dashboard</string>
    <string name="security_contacts">Security Contacts</string>
    <string name="self_alert">Self Alert</string>
    <string name="nearby_alert">Nearby Alert</string>
    <string name="fire_alert">Fire Alert</string>
    <string name="profile_info">Profile Info</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="configure_app_preferences">Configure app preferences</string>
    <string name="sms_preference">SMS Preferences</string>
    <string name="enable_sms_popup_summary">Enable popup when an SMS is received</string>
    <string name="enable_sms_popup">Enable SMS popup</string>
    <string name="set_security">Set security</string>
    <string name="set_security_summary">Enable security to lock app on startup</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_summary">Select your preferred language for the app.</string>
    <string name="sms_message">SMS message</string>
    <string name="sms_message_summary">Set SMS message</string>
    <string name="change_sms_message_to_send_out">Change SMS message to send out</string>
    <string name="location_preference">Location Preferences</string>
    <string name="current_location_sharing">Current location sharing</string>
    <string name="current_location_sharing_summary">Disable sharing current location in SMS</string>
    <string name="custom_location">Custom location</string>
    <string name="custom_location_summary">Save location to share if current location is unavailable</string>
    <string name="security_tips" tools:ignore="TypographyEllipsis">Security tips...</string>
    <string name="delete">Delete </string>
    <string name="user_profile_info">User Profile Info</string>
    <string name="user_account_deleted">User account deleted.</string>
    <string name="email_sent">Email sent.</string>
    <string name="welcome_to_quick_response">Welcome to Quick Response</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="sign_up_for_an_account">SIGN UP FOR AN ACCOUNT?</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_sign_in">ALREADY HAVE AN ACCOUNT? SIGN IN</string>
    <string name="no_internet">No internet !</string>
    <string name="connect_to_internet_to_get_latest_location_updates">Connect to internet to get latest location updates</string>
    <string name="app_privacy_policy">App\'s Privacy Policy</string>
    <string name="app_term_condition"><![CDATA[App\'s Terms & Conditions]]></string>
    <string name="okay">Okay</string>
    <string name="accept">Accept</string>
    <string name="lang_default" translatable="false">Default</string>
    <string name="lang_chinese">Chinese</string>
    <string name="lang_english">English</string>
    <string name="lang_french">French</string>
    <string name="lang_italian">Italian</string>
    <string name="lang_spanish">Spanish</string>
    <string name="verify_email_to_continue">Verify Email to continue</string>
    <string name="open_email">Open Email</string>
    <string name="open_email_for_verification_link">Open Email For Verification Link</string>
    <string name="fill_form_completely">Please, Fill Form Completely !</string>
    <string name="details_not_saved_check_values">Details not saved checked entered values !</string>
    <string name="verification_email_sent_to">"Verification email sent to "</string>
    <string name="media_files_are_stored_under">Media files are saved under:\n%s</string>
    <string name="media_files">Media Files</string>
    <string name="unnamed">Unnamed</string>
    <string name="err_no_internet">Please check your internet connection!</string>
    <string name="fruit_store_img">Fruit Store Image</string>
    <string name="buy_from_store">Buy From Store</string>
    <string name="view_your_purchases">View Your Purchases</string>
    <string name="subscribe">Subscribe</string>
    <string name="billing_premium_desc">The features includes \"Buying from store\" and it
        requires special one-time subscription. Please
        subscribe to enjoy these features for a lifetime.</string>
    <string name="price">$0</string>
    <string name="buy">Buy</string>
    <string name="err_subscription_not_supported">Subscriptions are not supported with your
        device!</string>
    <string name="err_service_disconnected">Play Store service is not currently available! Please
        check back later!</string>
    <string name="err_no_sku">We did not find any SKUs to display&#8230; Check your internet
        connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="one_apple">One Apple</string>
    <plurals name="apples">
        <item quantity="zero">Apple</item>
        <item quantity="one">Apple</item>
        <item quantity="many">Apples</item>
        <item quantity="other">Apples</item>
    </plurals>
    <plurals name="qty">
        <item quantity="zero">Qty: %d item purchased</item>
        <item quantity="one">Qty: %d item purchased</item>
        <item quantity="many">Qty: %d items purchased</item>
        <item quantity="other">Qty: %d items purchased</item>
    </plurals>
    <string name="unlimited_popcorn">Unlimited Popcorn for a month</string>
    <string name="purchased_with_expiry">Purchased, Expires at %s</string>
    <string name="not_purchased_yet">Not Purchased Yet</string>
    <string name="purchased">Purchased</string>
    <string name="purchase_expired">Purchase Expired at %s</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="hint_fname">First name</string>
    <string name="hint_lname">Last name</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-4788166230960873~7630091045</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="travel_alert">Travel Alert</string>
    <string name="error_cannot_write">Cannot write image captured by camera.</string>
    <string name="error_cannot_open">Cannot open camera.</string>
    <string name="error_cannot_get_permission">Camera permission not available.</string>
    <string name="error_not_having_camera">Your device does not have front camera.</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="error_details">Error details:</string>
    <string name="unknown_exception">Unknown exception</string>
    <string name="restart_app">Restart app</string>
    <string name="close_app">Close app</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="snooze">Snooze</string>
    <string name="appirator_app_title">Your App Name</string>
    <string name="appirator_market_url">market://details?id=%s</string>
    <string name="rate_title">Rate %s</string>
    <string name="rate_message">If you enjoy using %s, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="rate">Yes, Rate %s</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_cancel">No, Thanks</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="product_purchase">Product Purchase</string>
    <string name="hide">HIDE</string>
    <string name="hint_phone">Phone</string>
</resources>