<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.HomeActivity">

    <data>

        <variable
            name="presenter"
            type="com.kixfobby.security.quickresponse.home.HomeVM" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_fruit_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/fruit_store_img"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_buy_from_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:drawableEnd=
                        "@{safeUnbox(presenter.isPremiumPurchased), default=@drawable/ic_lock_outline_white}"
                    android:drawablePadding="@dimen/sizeMinus20"
                    android:onClick="@{(view) -> presenter.onClick(view)}"
                    android:text="@string/buy_from_store" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size10" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_view_your_purchases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd=
                        "@{safeUnbox(presenter.isPremiumPurchased), default=@drawable/ic_lock_outline_white}"
                    android:drawablePadding="@dimen/sizeMinus20"
                    android:onClick="@{(view) -> presenter.onClick(view)}"
                    android:text="@string/view_your_purchases" />

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
